# local-assistant

./: .gitignore  AGENTS.md  ROADMAP.md  spec.md
assistant/: .env.development  .gitignore  README.md  pyproject.toml
assistant/src/assistant/: __init__.py  cli.py  config.py  db.py  orchestrator.py  research.py  ui.py
assistant/src/assistant/logs/: __init__.py  debug.py  logger.py
assistant/src/assistant/notes/: __init__.py  categorizer.py  chunker.py  indexer.py  links.py  metadata.py  search.py  voice_note.py  workflows.py
assistant/src/assistant/providers/: __init__.py  local.py  remote.py
assistant/src/assistant/state/: __init__.py  tasks.py
assistant/src/assistant/tools/: __init__.py  file_search.py  note_append_daily.py  note_create.py  project_inspect.py  registry.py  runner.py
assistant/tests/: test_builtin_tools.py  test_categorizer.py  test_chunker.py  test_config.py  test_integration.py  test_local_providers.py  test_metadata.py  test_note_workflows.py  test_orchestrator.py  test_research.py  test_search.py  test_tasks.py  test_tools_registry.py  test_tools_runner.py  test_ui.py  test_voice_note_ingest.py
assistant/tools/: file_search.py  note_append_daily.py  note_create.py  project_inspect.py  registry.yaml
docs/guidelines/: ARCHITECTURE_GUIDELINE.md  IMPLEMENTATION_GUIDELINE.md  INVESTIGATION_REVIEW_PLANNING_PROTOTYPING.md  PROJECT_DOCUMENTATION_GUIDELINE.md  TESTING_GUIDELINE.md  UX_UI_DESIGN_GUIDELINE.md
scripts/: start-ollama.sh
