[project]
name = "assistant"
version = "0.1.0"
description = "CLI-first local personal AI assistant"
readme = "README.md"
authors = [
    { name = "Max Vresch", email = "max.vresch@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "textual>=8.2.7",
    "typer>=0.26.7",
]

[project.optional-dependencies]
local-llm = ["llama-cpp-python>=0.3.0"]

[project.scripts]
assistant = "assistant:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "types-PyYAML>=6.0.0",
]
